# suvetma

./: .gitignore  AnalyseExpressionRanges.R  CMakeLists.txt  CompareArrays.R  FindOptimalSVMParameters.cpp  GetAverageGeneExpression.cpp  README  SVMSupport.cpp  SVMSupport.hpp  SampleArrays.rb  SignTestByGene.cpp  SignTestFits.cpp  TestSVMs.cpp  TrainSVMs.cpp
