cmake_minimum_required(VERSION 2.6)
ADD_EXECUTABLE(TrainSVMs TrainSVMs.cpp SVMSupport.cpp)
ADD_EXECUTABLE(FindOptimalSVMParameters FindOptimalSVMParameters.cpp SVMSupport.cpp)
ADD_EXECUTABLE(TestSVMs TestSVMs.cpp SVMSupport.cpp)
ADD_EXECUTABLE(GetAverageGeneExpression GetAverageGeneExpression.cpp)
ADD_EXECUTABLE(SignTestFits SignTestFits.cpp)
ADD_EXECUTABLE(SignTestByGene SignTestByGene.cpp)
# ADD_INCLUDE()
TARGET_LINK_LIBRARIES(TrainSVMs boost_filesystem boost_program_options boost_regex svm)
TARGET_LINK_LIBRARIES(FindOptimalSVMParameters boost_filesystem boost_program_options boost_regex svm eo eoutils)
TARGET_LINK_LIBRARIES(TestSVMs boost_filesystem boost_program_options boost_regex svm)
TARGET_LINK_LIBRARIES(GetAverageGeneExpression boost_filesystem boost_program_options)
TARGET_LINK_LIBRARIES(SignTestFits boost_filesystem boost_program_options)
TARGET_LINK_LIBRARIES(SignTestByGene boost_filesystem boost_program_options)